// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`browserslist-to-esbuild > should no support android 4 1`] = `
[
  "chrome139",
]
`;

exports[`browserslist-to-esbuild > should work with android and ios 1`] = `
[
  "chrome139",
  "ios11",
]
`;

exports[`browserslist-to-esbuild > should work with ios 1`] = `
[
  "ios9",
]
`;

exports[`browserslist-to-esbuild > works by passing browsers as array 1`] = `
[
  "chrome105",
  "edge138",
  "firefox141",
  "ios11",
  "opera120",
  "safari18.5",
]
`;

exports[`browserslist-to-esbuild > works by passing browsers as string 1`] = `
[
  "chrome139",
  "edge139",
  "firefox141",
  "ie10",
  "ios18.5",
  "opera120",
  "safari18.5",
]
`;
